exploring GET POST DELETE

--- a/Readme
+++ b/Readme
@@ -51,4 +51,11 @@ DevTinder
 
 --------------------------------------------------------------
 
+HTTP Methods
+
+1. POST
+2. GET
+3. PATCH
+4. DELETE
+
 
